# FASTDB

./: .gitignore  ADR-HELM-DEPLOY.md  HOWTO_LOGIN.md  Makefile.in  README.md  aclocal.m4  configure  configure.ac  docker-compose.yaml
client/: Makefile.in  fastdb_client.py
db/: 2025-02-18_001_init.sql  2025-03-10_001_snana.sql  2025-03-21_001_alert.sql  2025-03-26_001_sourcepulltime.sql  2025-07-17_001_visit_bigint.sql  2025-07-18_lc_view.sql  2025-07-19_npix_order13.sql  2025-07-19_npix_order29.sql  2025-07-19_skymap_helpers.sql  2025-07-21_001_visit_primkey.sql  2025-08-27_procver_refactor.sql  2025-09-02_defaultcreatedat.sql  2025-09-03_diaobject_rootindex.sql  2025-09-10_unique_host.sql  2025-09-29_update_schema.sql  2025-10-20_nonnullvaliditystart.sql  2026-02-02_refactor.sql  2026-02-25_timestampbroker.sql  2026-02-26_omfg.sql  2026-03-03_remove_constraints.sql  2026-03-04_rootposition.sql  2026-03-09_brokerinfo_prvid.sql  2026-03-18_lastallalertsimport.sql  2026-03-19_collection_in_all_alerts_import_time.sql  2026-04-30_spectra_ishost.sql  apply_migrations.py  wipe_all_data.py
docs/: conf.py  developers.rst  filters.rst  index.rst  overview.rst  usage.rst
examples/: dp1_sn_coords.txt  example_lcfit.ipynb  using_fastdb_client.ipynb
helm/: HELM_HOWTO.md
notes/: brokerconsumer_config.yaml  rob_installations  rob_stress_2025apr.txt  some_dp1_SNe
scripts/: helm-deploy.sh  setup-kind-certs.sh  (+2 more)
share/: Makefile.am  Makefile.in
share/avsc/: DiaForcedSource.avsc  DiaObject.avsc  DiaSource.avsc  README.md  fastdb.v10_0_0.BrokerMessage.avsc  fastdb_9_0_1.BrokerMessage.avsc  fastdb_9_0_2.BrokerMessage.avsc  fastdb_test_0.2.Alert.avsc  fastdb_test_0.2.BrokerMessage.avsc  fastdb_test_0.2.DiaForcedSource.avsc  fastdb_test_0.2.DiaObject.avsc  fastdb_test_0.2.DiaSource.avsc
src/: Makefile.am  Makefile.in  db.py  kafka_consumer.py  ltcv.py  parquet_export.py  rkwebutil.py  spectrum.py  util.py
src/admin/: Alert.avsc  README.md  csv_to_avsc.py  fastdb_loader.py  load_dp1_parquet.py  load_snana_fits.py  load_snana_fits_ppdb.py
src/services/: all_alerts_importer.py  brokerconsumer.py  dr_importer.py  mongo_cleaner.py  projectsim.py  source_importer.py
src/webserver/: Makefile.am  Makefile.in  baseview.py  dbapp.py  ltcvapp.py  server.py  spectrumapp.py
src/webserver/static/: fastdb.css  fastdb.js  fastdb.js.in  fastdb_start.js.in  objectinfo.js  objectinfo.js.in  objectlist.js  objectlist.js.in  objectsearch.js  objectsearch.js.in  resetpasswd_start.js.in  rkauth.js.in
src/webserver/templates/: fastdb_webap.html.in
(+125 files in other folders)
