AUTOMAKE_OPTION = subdir-objects

sharedir = @installdir@/share
avscdir = @installdir@/share/avsc

avsc_DATA = avsc/fastdb_test_0.2.Alert.avsc \
	avsc/fastdb_test_0.2.DiaForcedSource.avsc \
	avsc/fastdb_test_0.2.DiaObject.avsc \
	avsc/fastdb_test_0.2.DiaSource.avsc \
	avsc/fastdb_test_0.2.BrokerMessage.avsc
