AUTOMAKE_OPTION = subdir-objects

sharedir = @installdir@/share
avscdir = @installdir@/share/avsc

avsc_DATA = avsc/fastdb_9_0_1.BrokerMessage.avsc \
	avsc/lsst.v9_0.alert.avsc \
	avsc/lsst.v9_0.diaObject.avsc \
	avsc/lsst.v9_0.diaSource.avsc \
	avsc/lsst.v9_0.diaForcedSource.avsc \
	avsc/lsst.v9_0.ssSource.avsc \
	avsc/lsst.v9_0.MPCORB.avsc
