AUTOMAKE_OPTION = subdir-objects

sharedir = @installdir@/share
avscdir = @installdir@/share/avsc

share_DATA = antares-ca.pem

avsc_DATA = avsc/fastdb.v10_0_0.BrokerMessage.avsc \
	avsc/lsst.v10_0.alert.avsc \
	avsc/lsst.v10_0.diaObject.avsc \
	avsc/lsst.v10_0.diaSource.avsc \
	avsc/lsst.v10_0.diaForcedSource.avsc \
	avsc/lsst.v10_0.ssObject.avsc \
	avsc/lsst.v10_0.ssSource.avsc \
	avsc/lsst.v10_0.mpc_orbits.avsc
